2-traffic-split/traffic-split-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http
  namespace: default
spec:
  parentRefs:
  - name: gateway
    namespace: istio-ingress
  hostnames: ["httpbin.example.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /get
    backendRefs:
    - name: httpbin-v1
      port: 8000
      weight: 75
    - name: httpbin-v2
      port: 8000
      weight: 25
      filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:  
          - name: hello
            value: world
